--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             </div>
           </div>
           <div class="card-body">
-              <p class="card-text">An in-depth guide on building a Flask application from scratch, including user authentication & real-time updates.</p>
+              <p class="card-text">A guide on building a Flask application from scratch, including user authentication & real-time updates.</p>
               <p><small>Published on: September 08, 2024</small></p>
               <span class="badge badge-secondary">Web Development</span>
               <a href="https://medium.com/@lindaolela/my-journey-from-concept-to-real-time-price-updates-e0cc755517c6" class="btn btn-primary" target="_blank">Read More</a>
@@ -489,6 +489,13 @@
     My journey into software development bagan when I realised how much I enjoyed building and automating solutions, 
     whether through Python scripting or web development.
   </p>
+  <p>Here's a quick snapshot of what I bring to the table:</p>
+  <ul class="list-unstyled">
+  <li><i class="bi bi-check-circle-fill text-warning"></i> Hand-on experience with Flask, JavaScript, and database integration</li>
+  <li><i class="bi bi-check-circle-fill text-warning"></i> Strong problem-solving skills with attention to detail</li>
+  <li><i class="bi bi-check-circle-fill text-warning"></i> Passion for full-stack development and IoT software</li>
+  <li><i class="bi bi-check-circle-fill text-warning"></i> Dedicated to continuous learning and improvement</li>
+  </ul>
   <p>
     I've worked on a variety of projects, including a <strong>Flask</strong>, <strong>JavaScript</strong>, and <strong>Excel</strong>
     has allowed me to develop a versatile skill set that I continue to expand.
@@ -496,9 +503,8 @@
   <p>
     Currently, I'm focussed on deepening my knowledge of <strong>Microsoft Fabric</strong> and software development, as I aim to bridge 
     the gap between business analytics and software engineering.
-    My ultimate goal is to transition into roles that combine my analytical and technical skills, such as a <strong>Data Engineer</strong>, <strong>Business Intelligence Developer</strong>
-    or a <strong>Full-stack developer</strong>.
   </p>
+  <a href="your-resume-link.pdf" target="_blank" class="btn btn-outline-warning mt-3">Download Resume</a>
   <p>
     Outside of coding, I enjoy writing about my projects and sharing insights with the developer community through platforms like <strong>Medium</strong> and <strong>LinkedIn</strong>.
   </p>
