--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
     Currently, I'm focussed on deepening my knowledge of <strong>Microsoft Fabric</strong> and software development, as I aim to bridge 
     the gap between business analytics and software engineering.
   </p>
-  <a href="your-resume-link.pdf" target="_blank" class="btn btn-outline-warning mt-3">Download Resume</a>
+  <a href="https://github.com/olela28/olela-website/blob/main/Linda%20Olela_CV_2024.pdf" target="_blank" class="btn btn-outline-warning mt-3">Download Resume</a>
   <p>
     Outside of coding, I enjoy writing about my projects and sharing insights with the developer community through platforms like <strong>Medium</strong> and <strong>LinkedIn</strong>.
   </p>
