--- a/index.html
+++ b/index.html
@@ -10,268 +10,8 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <!-- Bootstrap Icons -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-
+<link rel="stylesheet" href="static/style.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<style>
-  body {
-    background-color: #121212;
-    color: #e0e0e0;
-  }
-  .navbar, .footer {
-    background-color: #1f1f1f;
-  }
-  .navbar-brand, .nav-link, .footer {
-    color: #e0e0e0;
-  }
-  a.nav-link:hover {
-    color: #bb86fc;
-  }
-  h1, h2, h3, h4, h5, h6 {
-    color: #bb86fc;
-  }
-  .card {
-    background-color: #1e1e1e;
-    color: #e0e0e0;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.2s ease;
-  }
-  .card:hover {
-    transform: scale(1.05);
-  }
-  .card-title {
-    color: #ffcc00;
-  }
-  .btn-primary {
-    background-color: #ffcc00;
-    border: none;
-  }
-  .btn-primary:hover {
-    background-color: #e6b800;
-  }
-  #about {
-    background-color: #1e1e1e;
-    padding: 60px 0;
-    color: #e0e0e0;
-  }
-  #about h2 {
-    color: #ffcc00;
-    font-size: 36px;
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  #about .bio {
-    font-size: 18px;
-    line-height: 1.8;
-    margin: 0 auto;
-    max-width: 800px; /* Limit width for readability */
-    text-align: center;
-  }
-  .profile-img {
-    border-radius: 50%; /* Circular image */
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    margin: 20px auto;
-    display: block;
-  }
-  /* Blog/Articles Section Styling */
-  #blog {
-    background-color: #1e1e1e; /* Darker background for section */
-    color: #e0e0e0; /* Light text */
-    padding: 60px 0;
-  }
-
-  #blog h2 {
-    color: #ffcc00; /* Accent color for section heading */
-    font-size: 36px;
-    margin-bottom: 40px;
-  }
-  .blog-card {
-    background-color: #2e2e2e; /* Darker card background */
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
-  .blog-card:hover {
-    transform: scale(1.05); /* Slight zoom on hover */
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3);
-  }
-  .card-img-top {
-    height: 200px;
-    object-fit: cover; /* Ensure consistent image size */
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    transition: opacity 0.3s ease;
-  }
-  .overlay {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: rgba(0, 0, 0, 0.5); /* Dark overlay */
-        opacity: 0;
-        transition: opacity 0.3s ease;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .overlay-text {
-        color: #ffcc00;
-        font-size: 20px;
-        text-align: center;
-    }
-
-    .card-img-container:hover .overlay {
-        opacity: 1; /* Show overlay on hover */
-    }
-  .card-title {
-    color: #ffcc00; /* Accent color for blog titles */
-    font-size: 18px;
-  }
-  .card-text {
-    font-size: 16px;
-  }
-  .btn-primary {
-    background-color: #ffcc00; /* Accent button color */
-    border: none;
-  }
-  .btn-primary:hover {
-    background-color: #e6b800; /* Darker yellow on hover */
-  }
-  /* Responsive Behaviour */
-  @media (max-width: 768px) {
-    .card-img-top {
-      height: 150px;
-    }
-  }
-  /* Skills Section Styling */
-  #skills {
-        background-color: #1f1f1f; /* Dark background */
-        color: #ffffff; /* Light text */
-        padding: 60px 0;
-    }
-
-    #skills h2 {
-        color: #ffcc00; /* Accent color for section heading */
-        font-size: 36px;
-        margin-bottom: 40px;
-    }
-
-    .skills h5 {
-        margin-top: 15px;
-        margin-bottom: 10px;
-    }
-
-    .progress {
-        height: 8px;
-        background-color: #333333;
-        border-radius: 5px;
-        margin-bottom: 20px;
-    }
-
-    .progress-bar {
-        background-color: #ffcc00;
-    }
-
-    .fab, .fas {
-        color: #ffcc00; /* Icon color */
-        margin-bottom: 10px;
-    }
-
-    .text-center h3 {
-        margin-bottom: 30px;
-        font-size: 24px;
-        color: #ffcc00;
-    }
-
-    .text-center h5 {
-        color: #ffffff;
-        font-size: 18px;
-    }
-
-    /* Responsive Adjustments */
-    @media (max-width: 768px) {
-        #skills h2 {
-            font-size: 28px;
-        }
-
-        .text-center h3 {
-            font-size: 22px;
-        }
-
-        .text-center h5 {
-            font-size: 16px;
-        }
-    }
-    /* Contact Section Styling */
-    #contact {
-        background-color: #1f1f1f; /* Dark background */
-        color: #ffffff; /* Light text */
-        padding: 60px 0;
-    }
-
-    #contact h2 {
-        color: #ffcc00; /* Accent color for section heading */
-        font-size: 36px;
-        margin-bottom: 40px;
-    }
-
-    /* Contact Form Styling */
-    .form-control {
-        background-color: #333333; /* Dark background for input fields */
-        border: 1px solid #ffcc00; /* Border matching accent color */
-        color: #ffffff; /* Light text */
-    }
-
-    .form-control:focus {
-        border-color: #ffcc00;
-        box-shadow: none;
-    }
-
-    .btn-warning {
-        background-color: #ffcc00;
-        border-color: #ffcc00;
-    }
-
-    .btn-outline-light {
-        color: #ffffff;
-        border-color: #ffffff;
-    }
-
-    .btn-outline-light:hover {
-        background-color: #ffffff;
-        color: #1f1f1f;
-    }
-
-    /* Social Links Styling */
-    .fab {
-        margin-right: 10px;
-    }
-
-    a {
-        color: #ffcc00;
-        text-decoration: none;
-    }
-
-    a:hover {
-        color: #ffcc00;
-        text-decoration: underline;
-    }
-
-    /* Responsive Adjustments */
-    @media (max-width: 768px) {
-        #contact h2 {
-            font-size: 28px;
-        }
-    }
-</style>
 </head>
 <body>
 
