--- a/index.html
+++ b/index.html
@@ -334,37 +334,54 @@
     </div>
   </div>
 </nav>
+<!-- Footer -->
+<footer class="bg-dark text-white text-center py-3">
+  <p>&copy; 2024 Linda's Portfolio. All rights reserved.</p>
+</footer>
 
+<!-- Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-3V4lXjISG3F2lF84DXizYQofxkBHzlgDTrmQ7t9jjzdxDqURpGr7EV2TkQTTFsmk" crossorigin="anonymous"></script>
+<!-- Font Awesome Icons -->
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 <script>
-  // Example JavaScript to handle loading more posts
-  document.getElementById('load-more').addEventListener('click', function () {
-    // Fetch or append more blog post elements here
-    var blogContainer = document.getElementById('blog-container');
+  document.addEventListener('DOMContentLoaded', function() {
+    const loadMoreBtn = document.getElementById('loadMoreBtn');
+    const blogPostsContainer = document.getElementById('blog-posts');
+    let page = 1;
 
-    // Simulating adding new posts dynamically (this would normally come from a server)
-    for (var i=0; i<3; i++) {
-      var newPost = document.createElement('div');
-      newPost.classList.add('col-md-4', 'mb-4');
-      newPost.innerHTML =
-      <div class="card">
-        <img src="your-image-path.jpg" class="card-img-top" alt="Post Image">
-        <div class="card-body">
-          <h5 class="card-title">New Blog Post Title ${i+4}</h5>
-          <p class="card-text">This is a short description of the new blog post ${i+4}.</p>
-          <a href="#https://medium.com/@lindaolela/step-by-step-guide-building-a-stock-portfolio-web-application-00f654bd9753-${i+4}" target="_blank" class="btn btn-warning">Read More</a>
-          </div>
-          </div>
-          ;
-          blogContainer.appendChild(newPost);
+    function loadBlogPosts() {
+      fetch(`https://api.rss2json.com/v1/api.json?rss_url=https://medium.com/feed/@yourMediumUsername&page=${page}`)
+        .then(response => response.json())
+        .then(data => {
+          if (data.items && data.items.length > 0) {
+            data.items.forEach(post => {
+              const postElement = document.createElement('div');
+              postElement.className = 'col-md-4 mb-4';
+              postElement.innerHTML = `
+                <div class="card">
+                  <img src="${post.thumbnail}" class="card-img-top" alt="${post.title}">
+                  <div class="card-body">
+                    <h5 class="card-title">${post.title}</h5>
+                    <p class="card-text">${post.description}</p>
+                    <a href="${post.link}" class="btn btn-primary" target="_blank">Read More</a>
+                  </div>
+                </div>
+              `;
+              blogPostsContainer.appendChild(postElement);
+            });
+            page++;
+          } else {
+            loadMoreBtn.style.display = 'none';
+          }
+        });
     }
 
-  });
-</script>
+    loadMoreBtn.addEventListener('click', loadBlogPosts);
 
-<!-- Bootstrap JS and dependencies (jQuery and Popper) -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.9.5/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    // Initial load
+    loadBlogPosts();
+  });
+</script>https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
 
