--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
               <a href="https://medium.com/@lindaolela/my-journey-from-concept-to-real-time-price-updates-e0cc755517c6" class="btn btn-primary" target="_blank">Read More</a>
               </div>
           </div>
+        </article>
 
       <!-- Blog Post 2 -->
       <div class="col-md-4 mb-4">
@@ -198,7 +199,7 @@
               <a href="https://medium.com/@lindaolela/how-i-automated-the-renaming-of-pdf-files-with-python-ce8fbca92ac3" class="btn btn-primary" target="_blank">Read More</a>
           </div>
         </div>
-      </div>
+      </article>
 
       <!-- Blog Post 3 -->
       <div class="col-md-4 mb-4">
@@ -221,6 +222,7 @@
       </div>
     </div>
   </div>
+</article>
   <div class="text-center mt-4">
     <button id="load-more" class="btn btn-outline-warning">Load More</button>
   </div>
