--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <!-- Bootstrap Icons -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 <link rel="stylesheet" href="static/style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -18,8 +20,7 @@
    <section id="home" class="container text-center py-5">
     <h1>Welcome to My Portfolio</h1>
     <p>Hi, Im Linda a passionate software developer and data analyst based in Frankfurt. Want to know how I may help your projects</p>
-    <button>Learn More</button>
-
+    <a href="about" class="btn btn-outline-warning" target="_blank">Learn More</a>
    </section>
 
 
@@ -221,7 +222,6 @@
           </div>
       </div>
     </div>
-  </div>
 </article>
   <div class="text-center mt-4">
     <button id="load-more" class="btn btn-outline-warning">Load More</button>
