--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </article>
 
       <!-- Blog Post 2 -->
-      <div class="col-md-4 mb-4">
+      <article class="col-md-4 mb-4">
           <div class="card blog-card">
             <div class="card-img-container">
             <img src="static/pictures/milky.jpg" class="card-img-top" alt="Renaming">
@@ -203,7 +203,7 @@
       </article>
 
       <!-- Blog Post 3 -->
-      <div class="col-md-4 mb-4">
+      <article class="col-md-4 mb-4">
           <div class="card blog-card">
             <div class="card-img-container">
               <img src="static/pictures/powder.jpg" class="card-img-top" alt="Microsoft Fabric">
@@ -221,8 +221,9 @@
               </div>
           </div>
       </div>
-    </div>
 </article>
+</div>
+
   <div class="text-center mt-4">
     <button id="load-more" class="btn btn-outline-warning">Load More</button>
   </div>
