More project added

--- a/index.html
+++ b/index.html
@@ -80,8 +80,32 @@
           <div class="card-body">
             <h5 class="card-title">Flask Stock Trading App</h5>
             <p class="card-text">A web application that allows users to track stock prices in real-time and manage portfolios.</p>
-            <p><strong>Technologies:</strong> Python, JavaScript, SQL, HTML/CSS</p>
+            <p><strong>Technologies:</strong> Python, JavaScript, SQL, HTML</p>
+            <a href="https://github.com/olela28/flask-stock-portfolio-app-v1" class="btn btn-primary"  target="_blank">View on GitHub</a> 
+          </div>
+        </div>
+      </div>
+      <!-- SQLite Project -->
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="static/pictures/hole.jpg" class="card-img-top" alt="Project 2">
+          <div class="card-body">
+            <h5 class="card-title">Database Management Project</h5>
+            <p class="card-text">A project that allowed me to focus on improving my skills in SQL and database management.</p>
+            <p><strong>Technologies:</strong>SQL</p>
             <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-primary"  target="_blank">View on GitHub</a> 
+          </div>
+        </div>
+      </div>
+      <!-- Interactive To-Do App -->
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="static/pictures/hole.jpg" class="card-img-top" alt="Project 2">
+          <div class="card-body">
+            <h5 class="card-title">Interactive To-Do App</h5>
+            <p class="card-text">A scalable project covering database design, SQL queries, Python programming and user interaction.</p>
+            <p><strong>Technologies:</strong>Python, SQLite</p>
+            <a href="https://github.com/olela28/interactive-to-do-list" class="btn btn-primary"  target="_blank">View on GitHub</a> 
           </div>
         </div>
       </div>
@@ -93,7 +117,7 @@
             <h5 class="card-title">Portfolio Website</h5>
             <p class="card-text">My personal portfolio website to showcase projects and skills.</p>
             <p><strong>Technologies:</strong> HTML, CSS, Bootstrap</p>
-            <a href="#" class="btn btn-primary" target="_blank">View on GitHub</a>
+            <a href="https://github.com/olela28/olela-website" class="btn btn-primary" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
@@ -107,8 +131,8 @@
 
   <!-- Programming Languages -->
   <div class="row mb-4">
-      <div class="col-md-4 text-center">
-          <h3 class="text-center">Programming Languages</h3>
+    <div class="md-12">
+      <h3 class="text-center">Programming Languages</h3>
       </div>
       <div class="col-md-4 text-center">
           <i class="fab fa-python fa-3x"></i>
@@ -142,7 +166,7 @@
           <i class="fas fa-flask fa-3x"></i>
           <h5>Flask</h5>
           <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+              <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
           </div>
       </div>
       <div class="col-md-4 text-center">
