--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <!-- Flask Stock Trading App -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="static/pictures/hole.jpg" class="card-img-top" alt="Project 2">
+          <img src="static/pictures/javascript.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Flask Stock Trading App</h5>
             <p class="card-text">A web application that allows users to track stock prices in real-time and manage portfolios.</p>
@@ -88,11 +88,11 @@
       <!-- SQLite Project -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="static/pictures/hole.jpg" class="card-img-top" alt="Project 2">
+          <img src="static/pictures/database.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Database Management Project</h5>
             <p class="card-text">A project that allowed me to focus on improving my skills in SQL and database management.</p>
-            <p><strong>Technologies:</strong>SQL</p>
+            <p><strong>Technologies:</strong> SQLite</p>
             <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-primary"  target="_blank">View on GitHub</a> 
           </div>
         </div>
@@ -104,7 +104,7 @@
           <div class="card-body">
             <h5 class="card-title">Interactive To-Do App</h5>
             <p class="card-text">A scalable project covering database design, SQL queries, Python programming and user interaction.</p>
-            <p><strong>Technologies:</strong>Python, SQLite</p>
+            <p><strong>Technologies:</strong> Python, SQLite</p>
             <a href="https://github.com/olela28/interactive-to-do-list" class="btn btn-primary"  target="_blank">View on GitHub</a> 
           </div>
         </div>
