--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <!-- Flask Stock Trading App -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="static/pictures/javascript.jpg" class="card-img-top" alt="Project 2">
+          <img src="static/pictures/blue.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Flask Stock Trading App</h5>
             <p class="card-text">A web application that allows users to track stock prices in real-time and manage portfolios.</p>
