--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           </div>
           <div class="card-body">
             <header>
-              <h3>How to Build a Flask App</h3>
+              <h3>How to Build a Flask Web Application</h3>
             </header>
               <p class="card-text">An in-depth guide on building a Flask application from scratch, including user authentication and real-time updates.</p>
               <footer>
