--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <a href="https://medium.com/@lindaolela/my-journey-from-concept-to-real-time-price-updates-e0cc755517c6" class="btn btn-primary" target="_blank" class="blog-link">
           <div class="card blog-card">
             <div class="card-img-container">
-            <img src="static/pictures/oval.jpg" class="card-img-top" alt="Web App">
+            <img src="static/pictures/Flask.jpg" class="card-img-top" alt="Web App">
             <div class="overlay">
               <h5 class="overlay-text">Web Development</h5>
             </div>
