--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h5 class="card-title">PDF Renaming Automation</h5>
             <p class="card-text">Automated renaming of PDF files based on an Excel file to streamline document management.</p>
             <p><strong>Technologies:</strong> Python, Excel</p>
-            <a href="#" class="btn btn-primary" target="_blank">View on GitHub</a>
+            <a href="#" class="btn btn-outline-primary" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
