--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
    <section id="home" class="container text-center py-5">
     <h1>Welcome to My Portfolio</h1>
     <p>Hi, Im Linda a passionate software developer and data analyst based in Frankfurt. Want to know how I may help your projects</p>
-    <a href="#about" class="btn btn-outline-warning" target="_blank">Learn More</a>
+    <a href="#about" class="btn btn-outline-primary" target="_blank">Learn More</a>
    </section>
 
 
@@ -64,7 +64,7 @@
       <!-- PDF Renaming Automation -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="static/pictures/pc.jpg" class="card-img-top" alt="Flask Web App">
+          <img src="static/pictures/python.jpg" class="card-img-top" alt="Flask Web App">
           <div class="card-body">
             <h5 class="card-title">PDF Renaming Automation</h5>
             <p class="card-text">Automated renaming of PDF files based on an Excel file to streamline document management.</p>
@@ -76,7 +76,7 @@
       <!-- Flask Stock Trading App -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="static/pictures/blue.jpg" class="card-img-top" alt="Project 2">
+          <img src="static/pictures/programming.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Flask Stock Trading App</h5>
             <p class="card-text">A web application that allows users to track stock prices in real-time and manage portfolios.</p>
@@ -93,19 +93,19 @@
             <h5 class="card-title">Database Management Project</h5>
             <p class="card-text">A project that allowed me to focus on improving my skills in SQL and database management.</p>
             <p><strong>Technologies:</strong> SQLite</p>
-            <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-primary"  target="_blank">View on GitHub</a> 
+            <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-outline-primary"  target="_blank">View on GitHub</a> 
           </div>
         </div>
       </div>
       <!-- Interactive To-Do App -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="static/pictures/hole.jpg" class="card-img-top" alt="Project 2">
+          <img src="static/pictures/JS.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Interactive To-Do App</h5>
             <p class="card-text">A scalable project covering database design, SQL queries, Python programming and user interaction.</p>
             <p><strong>Technologies:</strong> Python, SQLite</p>
-            <a href="https://github.com/olela28/interactive-to-do-list" class="btn btn-primary"  target="_blank">View on GitHub</a> 
+            <a href="https://github.com/olela28/interactive-to-do-list" class="btn btn-outline-primary"  target="_blank">View on GitHub</a> 
           </div>
         </div>
       </div>
@@ -117,7 +117,7 @@
             <h5 class="card-title">Portfolio Website</h5>
             <p class="card-text">My personal portfolio website to showcase projects and skills.</p>
             <p><strong>Technologies:</strong> HTML, CSS, Bootstrap</p>
-            <a href="https://github.com/olela28/olela-website" class="btn btn-primary" target="_blank">View on GitHub</a>
+            <a href="https://github.com/olela28/olela-website" class="btn btn-outline-primary" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
@@ -247,7 +247,7 @@
         <a href="https://medium.com/@lindaolela/how-i-automated-the-renaming-of-pdf-files-with-python-ce8fbca92ac3" class="btn btn-primary" target="_blank" class="blog-link">
           <div class="card blog-card">
             <div class="card-img-container">
-            <img src="static/pictures/milky.jpg" class="card-img-top" alt="Renaming">
+            <img src="static/pictures/cube.jpg" class="card-img-top" alt="Renaming">
             <div class="overlay">
               <h5 class="overlay-text">Automation</h5>
             </div>
@@ -270,7 +270,7 @@
         <a href="https://medium.com/@lindaolela/transforming-data-with-microsoft-fabric-a-step-by-step-guide-for-beginners-a92098f6cd4c" class="btn btn-primary" target="_blank" class="blog-link">
           <div class="card blog-card">
             <div class="card-img-container">
-              <img src="static/pictures/powder.jpg" class="card-img-top" alt="Microsoft Fabric">
+              <img src="static/pictures/blue.jpg" class="card-img-top" alt="Microsoft Fabric">
               <div class="overlay">
                   <h5 class="overlay-text">Data Analysis</h5>
               </div>
