--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h5 class="card-title">Flask Stock Trading App</h5>
             <p class="card-text">A web application that allows users to track stock prices in real-time and manage portfolios.</p>
             <p><strong>Technologies:</strong> Python, JavaScript, SQL, HTML</p>
-            <a href="https://github.com/olela28/flask-stock-portfolio-app-v1" class="btn btn-primary"  target="_blank">View on GitHub</a> 
+            <a href="https://github.com/olela28/flask-stock-portfolio-app-v1" class="btn btn-ôutline-primary"  target="_blank">View on GitHub</a> 
           </div>
         </div>
       </div>
@@ -308,7 +308,7 @@
     whether through Python scripting or web development.
   </p>
   <p>Here's what I bring to the table:</p>
-  <ul class="list-unstyled" style="color: #bb86fc;">
+  <ul class="list-unstyled" style="color: #00ffff;">
   <li><i class="bi bi-check-circle-fill text-warning"></i> <strong>Developed scalable solutions using Flask & JavaScript, streamlining workflows for small businesses</strong></li>
   <li><i class="bi bi-check-circle-fill text-warning"></i> <strong>Applied problem-solving skills to debug complex issues in web development and data management</strong></li>
   <li><i class="bi bi-check-circle-fill text-warning"></i> <strong>Passionate about integrating IoT solutions into full-stack projects, staying at the forefront of technology</strong></li>
