new color palette

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h5 class="card-title">Flask Stock Trading App</h5>
             <p class="card-text">A web application that allows users to track stock prices in real-time and manage portfolios.</p>
             <p><strong>Technologies:</strong> Python, JavaScript, SQL, HTML</p>
-            <a href="https://github.com/olela28/flask-stock-portfolio-app-v1" class="btn btn-ôutline-primary"  target="_blank">View on GitHub</a> 
+            <a href="https://github.com/olela28/flask-stock-portfolio-app-v1" class="btn btn-outline-primary"  target="_blank">View on GitHub</a> 
           </div>
         </div>
       </div>
@@ -349,7 +349,7 @@
                   <label for="message" class="form-label">Message</label>
                   <textarea class="form-control" id="message" rows="5" placeholder="Your Message"></textarea>
               </div>
-              <button type="submit" class="btn btn-warning w-100">Send Message</button>
+              <button type="submit" class="btn btn-primary w-100">Send Message</button>
           </form>
       </div>
   </div>
