--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 </div>
 
   <div class="text-center mt-4">
-    <button id="load-more" class="btn btn-outline-warning">Load More</button>
+    <button id="load-more" class="btn btn-outline-primary">Load More</button>
   </div>
   </div>
 </section>
@@ -321,7 +321,7 @@
     Currently, I'm focussed on deepening my knowledge of <strong>Microsoft Fabric</strong> and software development, as I aim to bridge 
     the gap between business analytics and software engineering.
   </p>
-  <a href="https://github.com/olela28/olela-website/blob/main/Linda%20Olela_CV_2024.pdf" target="_blank" class="btn btn-outline-warning mt-3">Download Resume</a>
+  <a href="https://github.com/olela28/olela-website/blob/main/Linda%20Olela_CV_2024.pdf" target="_blank" class="btn btn-primary mt-3">Download Resume</a>
   <p>
     Outside of coding, I enjoy writing about my projects on <strong>Medium</strong> and <strong>LinkedIn</strong>, connecting with the developer community, and sharing insights on software trends.
   </p>
@@ -366,7 +366,7 @@
       <a href="https://medium.com/@lindaolela" target="_blank" class="btn btn-outline-light mx-2">
         <i class="fab fa-medium fa-2x"></i> Medium
       </a>
-      <p class="mt-3">Or send me an email at: <a href="mailto:olelalinda@gmail.com" class="text-warning">olelalinda@gmail.com</a></p>
+      <p class="mt-3">Or send me an email at: <a href="mailto:olelalinda@gmail.com" class="text-primary">olelalinda@gmail.com</a></p>
   </div>
 </section>
 
