--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
    <section id="home" class="container text-center py-5">
     <h1>Welcome to My Portfolio</h1>
     <p>Hi, Im Linda a passionate software developer and data analyst based in Frankfurt. Want to know how I may help your projects</p>
-    <a href="#about" class="btn btn-outline-primary" target="_blank">Learn More</a>
+    <a href="#about" class="btn btn-outline-warning" target="_blank">Learn More</a>
    </section>
 
 
@@ -69,7 +69,7 @@
             <h5 class="card-title">PDF Renaming Automation</h5>
             <p class="card-text">Automated renaming of PDF files based on an Excel file to streamline document management.</p>
             <p><strong>Technologies:</strong> Python, Excel</p>
-            <a href="#" class="btn btn-outline-primary" target="_blank">View on GitHub</a>
+            <a href="#" class="btn btn-outline-warning" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
             <h5 class="card-title">Flask Stock Trading App</h5>
             <p class="card-text">A web application that allows users to track stock prices in real-time and manage portfolios.</p>
             <p><strong>Technologies:</strong> Python, JavaScript, SQL, HTML</p>
-            <a href="https://github.com/olela28/flask-stock-portfolio-app-v1" class="btn btn-outline-primary"  target="_blank">View on GitHub</a> 
+            <a href="https://github.com/olela28/flask-stock-portfolio-app-v1" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
           </div>
         </div>
       </div>
@@ -93,7 +93,7 @@
             <h5 class="card-title">Database Management Project</h5>
             <p class="card-text">A project that allowed me to focus on improving my skills in SQL and database management.</p>
             <p><strong>Technologies:</strong> SQLite</p>
-            <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-outline-primary"  target="_blank">View on GitHub</a> 
+            <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
           </div>
         </div>
       </div>
@@ -105,7 +105,7 @@
             <h5 class="card-title">Interactive To-Do App</h5>
             <p class="card-text">A scalable project covering database design, SQL queries, Python programming and user interaction.</p>
             <p><strong>Technologies:</strong> Python, SQLite</p>
-            <a href="https://github.com/olela28/interactive-to-do-list" class="btn btn-outline-primary"  target="_blank">View on GitHub</a> 
+            <a href="https://github.com/olela28/interactive-to-do-list" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
           </div>
         </div>
       </div>
@@ -117,7 +117,7 @@
             <h5 class="card-title">Portfolio Website</h5>
             <p class="card-text">My personal portfolio website to showcase projects and skills.</p>
             <p><strong>Technologies:</strong> HTML, CSS, Bootstrap</p>
-            <a href="https://github.com/olela28/olela-website" class="btn btn-outline-primary" target="_blank">View on GitHub</a>
+            <a href="https://github.com/olela28/olela-website" class="btn btn-outline-warning" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
@@ -291,7 +291,7 @@
 </div>
 
   <div class="text-center mt-4">
-    <button id="load-more" class="btn btn-outline-primary">Load More</button>
+    <button id="load-more" class="btn btn-outline-warning">Load More</button>
   </div>
   </div>
 </section>
@@ -308,7 +308,7 @@
     whether through Python scripting or web development.
   </p>
   <p>Here's what I bring to the table:</p>
-  <ul class="list-unstyled" style="color: #00ffff;">
+  <ul class="list-unstyled" style="color: #bb86fc;">
   <li><i class="bi bi-check-circle-fill text-warning"></i> <strong>Developed scalable solutions using Flask & JavaScript, streamlining workflows for small businesses</strong></li>
   <li><i class="bi bi-check-circle-fill text-warning"></i> <strong>Applied problem-solving skills to debug complex issues in web development and data management</strong></li>
   <li><i class="bi bi-check-circle-fill text-warning"></i> <strong>Passionate about integrating IoT solutions into full-stack projects, staying at the forefront of technology</strong></li>
@@ -366,7 +366,7 @@
       <a href="https://medium.com/@lindaolela" target="_blank" class="btn btn-outline-light mx-2">
         <i class="fab fa-medium fa-2x"></i> Medium
       </a>
-      <p class="mt-3">Or send me an email at: <a href="mailto:olelalinda@gmail.com" class="text-primary">olelalinda@gmail.com</a></p>
+      <p class="mt-3">Or send me an email at: <a href="mailto:olelalinda@gmail.com" class="text-warning">olelalinda@gmail.com</a></p>
   </div>
 </section>
 
