--- a/index.html
+++ b/index.html
@@ -322,9 +322,11 @@
     the gap between business analytics and software engineering.
   </p>
   <a href="https://github.com/olela28/olela-website/blob/main/Linda%20Olela_CV_2024.pdf" target="_blank" class="btn btn-primary mt-3">Download Resume</a>
+  <div>
   <p>
     Outside of coding, I enjoy writing about my projects on <strong>Medium</strong> and <strong>LinkedIn</strong>, connecting with the developer community, and sharing insights on software trends.
   </p>
+  </div>
  </div>
 </section>
 
