--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <!-- Interactive To-Do App -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="static/pictures/JS.jpg" class="card-img-top" alt="Project 2">
+          <img src="static/pictures/Flask.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Interactive To-Do App</h5>
             <p class="card-text">A scalable project covering database design, SQL queries, Python programming and user interaction.</p>
@@ -224,7 +224,7 @@
         <a href="https://medium.com/@lindaolela/my-journey-from-concept-to-real-time-price-updates-e0cc755517c6" class="btn btn-primary" target="_blank" class="blog-link">
           <div class="card blog-card">
             <div class="card-img-container">
-            <img src="static/pictures/Flask.jpg" class="card-img-top" alt="Web App">
+            <img src="static/pictures/enter.jpg" class="card-img-top" alt="Web App">
             <div class="overlay">
               <h5 class="overlay-text">Web Development</h5>
             </div>
