--- a/index.html
+++ b/index.html
@@ -429,6 +429,23 @@
     });
   </script>
 
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    var navbarCollapse = document.querySelector('.navbar-collapse');
+
+    // Close the dropdown when a nav-link is clicked
+    document.querySelectorAll('.nav-link').forEach(function (link) {
+      link.addEventListener('click', function () {
+        if (navbarCollapse.classList.contains('show')) {
+          navbarCollapse.classList.remove('show');
+          document.querySelector('.navbar-toggler').classList.add('collapsed');
+        }
+      });
+    });
+  });
+</script>
+
+
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
  
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
