--- a/index.html
+++ b/index.html
@@ -338,23 +338,29 @@
   <!-- Contact Form -->
   <div class="row justify-content-center">
       <div class="col-md-8">
-          <form>
+          <form action="https://formspree.io/f/mrbzwpke" method="POST" id="contactForm">
               <div class="mb-3">
                   <label for="name" class="form-label">Name</label>
-                  <input type="text" class="form-control" id="name" placeholder="Your Name">
+                  <input type="text" class="form-control" id="name" placeholder="Your Name" required>
               </div>
               <div class="mb-3">
                   <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                  <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
               </div>
               <div class="mb-3">
                   <label for="message" class="form-label">Message</label>
-                  <textarea class="form-control" id="message" rows="5" placeholder="Your Message"></textarea>
+                  <textarea class="form-control" id="message" rows="5" placeholder="Your Message" required></textarea>
               </div>
-              <button type="submit" class="btn btn-primary w-100">Send Message</button>
+              <button type="submit" class="btn btn-outline-primary w-50">Send Message</button>
           </form>
       </div>
   </div>
+
+  <!-- Thank You Message Popup -->
+  <div id="thankYouMessage">
+    Thank you! Your message has been sent.
+  </div>
+</section>
 
   <!-- Social Links -->
   <div class="text-center mt-5">
@@ -368,7 +374,6 @@
       <a href="https://medium.com/@lindaolela" target="_blank" class="btn btn-outline-light mx-2">
         <i class="fab fa-medium fa-2x"></i> Medium
       </a>
-      <p class="mt-3">Or send me an email at: <a href="mailto:olelalinda@gmail.com" class="text-warning">olelalinda@gmail.com</a></p>
   </div>
 </section>
 
@@ -444,6 +449,40 @@
     });
   });
 </script>
+
+<script>
+  const form = document.getElementById('contactForm');
+  const thankYouMessage = document.getElementById('thankYouMessage');
+
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault(); // Prevent the default form submission
+
+    const formData = new FormData(form);
+    const response = await fetch(form.action, {
+      method: 'POST',
+      body: formData,
+      headers: {
+        'Accept': 'application/json'
+      }
+    });
+
+    if (response.ok) {
+      // Show thank you message
+      thankYouMessage.style.display = 'block';
+
+      // Hide the thank you message after 5 seconds
+      setTimeout(() => {
+        thankYouMessage.style.display = 'none';
+      }, 5000);
+
+      // Reset the form
+      form.reset();
+    } else {
+      alert('Oops! Something went wrong. Please try again.');
+    }
+  });
+</script>
+
 
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
