--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                   <label for="message" class="form-label">Message</label>
                   <textarea class="form-control" id="message" rows="5" placeholder="Your Message" required></textarea>
               </div>
-              <button type="submit" class="btn btn-outline-primary w-50">Send Message</button>
+              <button type="submit" class="btn btn-outline-warning w-50">Send Message</button>
           </form>
       </div>
   </div>
