--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Sticky Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Linda's Portfolio</a>
+    <a class="navbar-brand" href="#">Portfolio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -51,7 +51,7 @@
 
   <!-- Home Section -->
    <section id="home" class="container text-center py-5">
-    <h1>Welcome to My Portfolio</h1>
+    <h1>Software Developer & Data Analyst</h1>
     <p>Hi, Im Linda a passionate software developer and data analyst based in Frankfurt. Want to know how I may help your projects</p>
     <a href="#about" class="btn btn-outline-warning" target="_blank">Learn More</a>
    </section>
