--- a/index.html
+++ b/index.html
@@ -309,10 +309,10 @@
   </p>
   <p>Here's what I bring to the table:</p>
   <ul class="list-unstyled" style="color: #bb86fc;">
-  <li><i class="bi bi-check-circle-fill text-warning"></i> <strong>Developed scalable solutions using Flask & JavaScript, streamlining workflows for small businesses</strong></li>
-  <li><i class="bi bi-check-circle-fill text-warning"></i> <strong>Applied problem-solving skills to debug complex issues in web development and data management</strong></li>
-  <li><i class="bi bi-check-circle-fill text-warning"></i> <strong>Passionate about integrating IoT solutions into full-stack projects, staying at the forefront of technology</strong></li>
-  <li><i class="bi bi-check-circle-fill text-warning"></i> <strong>Continuously learning, with current focus on mastering Microsoft Fabric & enhancing software engineering practices</strong></li>
+  <li><i class="bi bi-check-circle-fill text-white"></i> <strong>Developed scalable solutions using Flask & JavaScript, streamlining workflows for small businesses</strong></li>
+  <li><i class="bi bi-check-circle-fill text-white"></i> <strong>Applied problem-solving skills to debug complex issues in web development and data management</strong></li>
+  <li><i class="bi bi-check-circle-fill text-white"></i> <strong>Passionate about integrating IoT solutions into full-stack projects, staying at the forefront of technology</strong></li>
+  <li><i class="bi bi-check-circle-fill text-white"></i> <strong>Continuously learning, with current focus on mastering Microsoft Fabric & enhancing software engineering practices</strong></li>
   </ul>
   <p>
     My projects range from automation with Python scripting to business analytics using Excel.
