--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
  <!-- About Section -->
  <section id="about" class="container py-5">
-  <h2>About Me</h2>
+  <h2 class="text-center">About Me</h2>
   <img src="static/pictures/Profilepic.PNG" alt="Linda" class="profile-img">
   <div class="bio">
   <p>
