--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
   </p>
   <p>Here's what I bring to the table:</p>
   <ul class="list-unstyled" style="color: #bb86fc;">
-  <li><i class="bi bi-check-circle-fil text-mint"></i> <strong>Developed scalable solutions using Flask & JavaScript, streamlining workflows for small businesses</strong></li>
+  <li><i class="bi bi-check-circle-fil" style="color: #a2e2e0;"></i> <strong>Developed scalable solutions using Flask & JavaScript, streamlining workflows for small businesses</strong></li>
   <li><i class="bi bi-check-circle-fill text-dark"></i> <strong>Applied problem-solving skills to debug complex issues in web development and data management</strong></li>
   <li><i class="bi bi-check-circle-fill text-dark"></i> <strong>Passionate about integrating IoT solutions into full-stack projects, staying at the forefront of technology</strong></li>
   <li><i class="bi bi-check-circle-fill text-dark"></i> <strong>Continuously learning, with current focus on mastering Microsoft Fabric & enhancing software engineering practices</strong></li>
