--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
 <section id="projects" class="container py-5">
   <h2 class="text-center mb-5">Projects</h2>
     <div class="row">
-      <!-- PDF Renaming Automation -->
+      <!-- Interactive To-Do App -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="static/pictures/python.jpg" class="card-img-top" alt="Flask Web App">
+          <img src="static/pictures/darkpc.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
-            <h5 class="card-title">PDF Renaming Automation</h5>
-            <p class="card-text">Automated renaming of PDF files based on an Excel file to streamline document management.</p>
-            <p><strong>Technologies:</strong> Python, Excel</p>
-            <a href="#" class="btn btn-outline-warning" target="_blank">View on GitHub</a>
+            <h5 class="card-title">Interactive To-Do App</h5>
+            <p class="card-text">A scalable project covering database design, SQL queries, Python programming and user interaction.</p>
+            <p><strong>Technologies:</strong> Python, SQLite</p>
+            <a href="https://github.com/olela28/interactive-to-do-list" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
           </div>
         </div>
       </div>
@@ -97,15 +97,15 @@
           </div>
         </div>
       </div>
-      <!-- Interactive To-Do App -->
+      <!-- PDF Renaming Automation -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="static/pictures/darkpc.jpg" class="card-img-top" alt="Project 2">
+          <img src="static/pictures/python.jpg" class="card-img-top" alt="Flask Web App">
           <div class="card-body">
-            <h5 class="card-title">Interactive To-Do App</h5>
-            <p class="card-text">A scalable project covering database design, SQL queries, Python programming and user interaction.</p>
-            <p><strong>Technologies:</strong> Python, SQLite</p>
-            <a href="https://github.com/olela28/interactive-to-do-list" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
+            <h5 class="card-title">PDF Renaming Automation</h5>
+            <p class="card-text">Automated renaming of PDF files based on an Excel file to streamline document management.</p>
+            <p><strong>Technologies:</strong> Python, Excel</p>
+            <a href="#" class="btn btn-outline-warning" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
@@ -309,7 +309,7 @@
   </p>
   <p>Here's what I bring to the table:</p>
   <ul class="list-unstyled" style="color: #bb86fc;">
-  <li><i class="bi bi-check-circle-fil" style="color: #a2e2e0;"></i> <strong>Developed scalable solutions using Flask & JavaScript, streamlining workflows for small businesses</strong></li>
+  <li><i class="bi bi-check-circle-fil text-purple"></i> <strong>Developed scalable solutions using Flask & JavaScript, streamlining workflows for small businesses</strong></li>
   <li><i class="bi bi-check-circle-fill text-dark"></i> <strong>Applied problem-solving skills to debug complex issues in web development and data management</strong></li>
   <li><i class="bi bi-check-circle-fill text-dark"></i> <strong>Passionate about integrating IoT solutions into full-stack projects, staying at the forefront of technology</strong></li>
   <li><i class="bi bi-check-circle-fill text-dark"></i> <strong>Continuously learning, with current focus on mastering Microsoft Fabric & enhancing software engineering practices</strong></li>
