--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <img src="static/pictures/darkpc.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Interactive To-Do App</h5>
-            <p class="card-text">A scalable project covering database design, SQL queries, Python programming and user interaction.</p>
+            <p class="card-text">A scalable project covering database design, SQL queries, Python and user interaction.</p>
             <p><strong>Technologies:</strong> Python, SQLite</p>
             <a href="https://github.com/olela28/interactive-to-do-list" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
           </div>
