--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="/projects.html">Projects</a></li>
         <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
         <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
@@ -69,6 +69,7 @@
             <h5 class="card-title">Interactive To-Do App</h5>
             <p class="card-text">A scalable project covering database design, SQL queries, Python and user interaction.</p>
             <p><strong>Technologies:</strong> Python, SQLite</p>
+            <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a>
             <a href="https://github.com/olela28/interactive-to-do-list" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
           </div>
         </div>
@@ -78,9 +79,10 @@
         <div class="card">
           <img src="static/pictures/programming.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
-            <h5 class="card-title">Flask Stock Trading App</h5>
+            <h5 class="card-title">Real-time Stock Trading App</h5>
             <p class="card-text">A web application that allows users to track stock prices in real-time and manage portfolios.</p>
             <p><strong>Technologies:</strong> Python, JavaScript, SQL, HTML</p>
+            <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a>
             <a href="https://github.com/olela28/flask-stock-portfolio-app-v1" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
           </div>
         </div>
@@ -93,6 +95,7 @@
             <h5 class="card-title">Database Management Project</h5>
             <p class="card-text">A project that allowed me to focus on improving my skills in SQL and database management.</p>
             <p><strong>Technologies:</strong> SQLite</p>
+            <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a>
             <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
           </div>
         </div>
@@ -105,6 +108,7 @@
             <h5 class="card-title">PDF Renaming Automation</h5>
             <p class="card-text">Automated renaming of PDF files based on an Excel file to streamline document management.</p>
             <p><strong>Technologies:</strong> Python, Excel</p>
+            <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a>
             <a href="#" class="btn btn-outline-warning" target="_blank">View on GitHub</a>
           </div>
         </div>
@@ -117,6 +121,7 @@
             <h5 class="card-title">Portfolio Website</h5>
             <p class="card-text">My personal portfolio website to showcase projects and skills.</p>
             <p><strong>Technologies:</strong> HTML, CSS, Bootstrap</p>
+            <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a>
             <a href="https://github.com/olela28/olela-website" class="btn btn-outline-warning" target="_blank">View on GitHub</a>
           </div>
         </div>
