--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <!-- Home Section -->
    <section id="home" class="container text-center py-5">
     <h1>Software Developer & Data Analyst</h1>
-    <p>Hi, Im Linda a passionate software developer and data analyst based in Frankfurt. Want to know how I may help your projects</p>
+    <p>Hi, Im Linda a passionate software developer and data analyst based in Frankfurt.<br> Want to know how I may help your projects</p>
     <a href="#about" class="btn btn-outline-warning" target="_blank">Learn More</a>
    </section>
 
@@ -314,7 +314,7 @@
   </p>
   <p>Here's what I bring to the table:</p>
   <ul class="list-unstyled" style="color: #bb86fc;">
-  <li><i class="bi bi-check-circle-fil text-purple"></i> <strong>Developed scalable solutions using Flask & JavaScript, streamlining workflows for small businesses</strong></li>
+  <li><i class="bi bi-check-circle-fil text-dark"></i> <strong>Developed scalable solutions using Flask & JavaScript, streamlining workflows for small businesses</strong></li>
   <li><i class="bi bi-check-circle-fill text-dark"></i> <strong>Applied problem-solving skills to debug complex issues in web development and data management</strong></li>
   <li><i class="bi bi-check-circle-fill text-dark"></i> <strong>Passionate about integrating IoT solutions into full-stack projects, staying at the forefront of technology</strong></li>
   <li><i class="bi bi-check-circle-fill text-dark"></i> <strong>Continuously learning, with current focus on mastering Microsoft Fabric & enhancing software engineering practices</strong></li>
