--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h5 class="card-title">Interactive To-Do App</h5>
             <p class="card-text">A scalable project covering database design, SQL queries, Python and user interaction.</p>
             <p><strong>Technologies:</strong> Python, SQLite</p>
-            <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a>
+           <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
             <a href="https://github.com/olela28/interactive-to-do-list" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
           </div>
         </div>
@@ -82,7 +82,7 @@
             <h5 class="card-title">Real-time Stock Trading App</h5>
             <p class="card-text">A web application that allows users to track stock prices in real-time and manage portfolios.</p>
             <p><strong>Technologies:</strong> Python, JavaScript, SQL, HTML</p>
-            <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a>
+            <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
             <a href="https://github.com/olela28/flask-stock-portfolio-app-v1" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
           </div>
         </div>
@@ -95,7 +95,7 @@
             <h5 class="card-title">Database Management Project</h5>
             <p class="card-text">A project that allowed me to focus on improving my skills in SQL and database management.</p>
             <p><strong>Technologies:</strong> SQLite</p>
-            <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a>
+            <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
             <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
           </div>
         </div>
@@ -108,7 +108,7 @@
             <h5 class="card-title">PDF Renaming Automation</h5>
             <p class="card-text">Automated renaming of PDF files based on an Excel file to streamline document management.</p>
             <p><strong>Technologies:</strong> Python, Excel</p>
-            <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a>
+            <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
             <a href="#" class="btn btn-outline-warning" target="_blank">View on GitHub</a>
           </div>
         </div>
@@ -121,7 +121,7 @@
             <h5 class="card-title">Portfolio Website</h5>
             <p class="card-text">My personal portfolio website to showcase projects and skills.</p>
             <p><strong>Technologies:</strong> HTML, CSS, Bootstrap</p>
-            <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a>
+            <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
             <a href="https://github.com/olela28/olela-website" class="btn btn-outline-warning" target="_blank">View on GitHub</a>
           </div>
         </div>
